# inversion

./: .gitignore  .travis.yml  Inversion.cabal  LICENSE  README.md  build.bat  find-and-preview.bat  find-and-preview.sh  inversion.cabal  playchords.bat
preview/: preview-chords.py  pygameplayer.py  soxplayer.py  test_chord.json
src/: Chord.hs  Fingering.hs  Instrument.hs  Interval.hs  Json.hs  Main.hs  Note.hs  Pattern.hs  Preview.hs  Print.hs  Search.hs  Template.hs  TemplateParse.hs
