name:                Inversion
version:             0.0.1.0
synopsis:            
description:         
license:             BSD3
license-file:        LICENSE
author:              Sergey Yavnyi
maintainer:
copyright:           
category:            Music
build-type:          Simple
cabal-version:       >=1.18

executable inversion
  Main-is:             Main.hs
  build-depends:       base, containers, parsec, cmdargs, json == 0.7
  hs-source-dirs:      src
  ghc-options:         -Wall -fwarn-incomplete-patterns -fno-warn-missing-signatures -fno-warn-name-shadowing

executable audio-preview
  Main-is:             Preview.hs
  build-depends:       base, binary, bytestring
  hs-source-dirs:      src
  ghc-options:         -Wall -fwarn-incomplete-patterns -fno-warn-missing-signatures -fno-warn-name-shadowing

